--- a/src/app/dropdown/dropdown.component.html
+++ b/src/app/dropdown/dropdown.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <select (change)="countryToState($event)"> 
-        <option>select country</option>
+        <option>Select Country</option>
         <option *ngFor="let countries of countryName" value="{{countries.id}}">{{countries.name}}</option>
     </select>
     <select>
-        <option>select city</option>
+        <option>Select City</option>
         <option *ngFor="let state of stateName">{{state.name}}</option>
     </select>
     
