changed country to countries

--- a/src/app/dropdown/dropdown.component.html
+++ b/src/app/dropdown/dropdown.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <select (change)="countryToState($event)"> 
-        <option>Select Country</option>
+        <option>Select Countries</option>
         <option *ngFor="let countries of countryName" value="{{countries.id}}">{{countries.name}}</option>
     </select>
     <select>
